<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:padding="12dp"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="12dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            app:queryBackground="@drawable/bg_search_rounded"
            app:queryHint="@string/search_hint"
            app:iconifiedByDefault="false"
            app:searchIcon="@drawable/baseline_search_24" />

        <ImageButton
            android:id="@+id/btn_filter"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@android:drawable/ic_menu_sort_by_size"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/filter" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_header_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular"
        android:textColor="@color/purple"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:visibility="visible"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="50dp"
        android:scrollbars="vertical" />

</LinearLayout>