<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_review"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/et_rating_input"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="0.0"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="24dp"
            android:maxLength="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/ 10"
            android:textSize="16dp"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_review">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_comment_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
            android:minLines="6"
            android:maxLines="10"
            android:gravity="top|start"
            android:scrollbars="vertical"
            android:textSize="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/btn_delete_review"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_delete"
            android:visibility="gone"
            android:clickable="true"
            android:focusable="true"
            app:tint="@color/red" />
        <View android:layout_width="0dp" android:layout_height="0dp" android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_save_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

    </LinearLayout>
</LinearLayout>